@@ -1785,6 +1785,11 @@ name|LocalVariableGen
 name|l
 parameter_list|)
 block|{
+name|l
+operator|.
+name|dispose
+argument_list|()
+expr_stmt|;
 name|variable_vec
 operator|.
 name|remove
@@ -1799,6 +1804,20 @@ name|void
 name|removeLocalVariables
 parameter_list|()
 block|{
+for|for
+control|(
+name|LocalVariableGen
+name|lv
+range|:
+name|variable_vec
+control|)
+block|{
+name|lv
+operator|.
+name|dispose
+argument_list|()
+expr_stmt|;
+block|}
 name|variable_vec
 operator|.
 name|clear
